--- a/samples/WebSocketSample/WebSocketSample.csproj
+++ b/samples/WebSocketSample/WebSocketSample.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\build\dependencies.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFrameworks>netcoreapp2.0;net461</TargetFrameworks>
     <OutputType>Exe</OutputType>
     <!-- Don't create a NuGet package -->
     <IsPackable>false</IsPackable>
